// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin should create domain 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createDomain } from 'effector';
const domain = createDomain(\\"domain\\", {
  loc: {
    file: _effectorFileName,
    line: 4,
    column: 15
  },
  name: \\"domain\\"
});
const foo = createDomain('bar', {
  loc: {
    file: _effectorFileName,
    line: 5,
    column: 12
  },
  name: \\"foo\\"
});"
`;

exports[`babel-plugin should create domain domain 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createDomain } from 'effector';
const domain = createDomain(\\"domain\\", {
  loc: {
    file: _effectorFileName,
    line: 4,
    column: 15
  },
  name: \\"domain\\"
});
const foo = domain.domain(\\"foo\\", {
  loc: {
    file: _effectorFileName,
    line: 5,
    column: 12
  },
  name: \\"foo\\"
});
const bar = domain.domain('baz', {
  loc: {
    file: _effectorFileName,
    line: 6,
    column: 12
  },
  name: \\"bar\\"
});"
`;

exports[`babel-plugin should create domain effect 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createDomain } from 'effector';
const domain = createDomain(\\"domain\\", {
  loc: {
    file: _effectorFileName,
    line: 4,
    column: 15
  },
  name: \\"domain\\"
});
const a = domain.effect(\\"a\\", {
  loc: {
    file: _effectorFileName,
    line: 6,
    column: 10
  },
  name: \\"a\\"
});

const f = () => domain.effect(\\"f\\", {
  loc: {
    file: _effectorFileName,
    line: 7,
    column: 16
  },
  name: \\"f\\"
});

const b = domain.effect('hello', {
  loc: {
    file: _effectorFileName,
    line: 8,
    column: 10
  },
  name: \\"b\\"
});

const g = () => domain.effect('baz', {
  loc: {
    file: _effectorFileName,
    line: 9,
    column: 16
  },
  name: \\"g\\"
});"
`;

exports[`babel-plugin should create domain event 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createDomain } from 'effector';
const domain = createDomain(\\"domain\\", {
  loc: {
    file: _effectorFileName,
    line: 4,
    column: 15
  },
  name: \\"domain\\"
});
const a = domain.event(\\"a\\", {
  loc: {
    file: _effectorFileName,
    line: 6,
    column: 10
  },
  name: \\"a\\"
});

const f = () => domain.event(\\"f\\", {
  loc: {
    file: _effectorFileName,
    line: 7,
    column: 16
  },
  name: \\"f\\"
});

const b = domain.event('asm', {
  loc: {
    file: _effectorFileName,
    line: 8,
    column: 10
  },
  name: \\"b\\"
});

const g = () => domain.event('tasm', {
  loc: {
    file: _effectorFileName,
    line: 9,
    column: 16
  },
  name: \\"g\\"
});"
`;

exports[`babel-plugin should create domain store 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createDomain } from 'effector';
const domain = createDomain(\\"domain\\", {
  loc: {
    file: _effectorFileName,
    line: 4,
    column: 15
  },
  name: \\"domain\\"
});
const a = domain.store('bar', {
  loc: {
    file: _effectorFileName,
    line: 6,
    column: 10
  },
  name: \\"a\\"
});
const b = domain.store('h', {
  ɔ: {
    option: 'test',
    ['na' + 'me']: 'LOL'
  },
  loc: {
    file: _effectorFileName,
    line: 7,
    column: 10
  },
  name: \\"b\\"
});
const c = domain.store('h', {
  ɔ: {
    name: 'test'
  },
  loc: {
    file: _effectorFileName,
    line: 8,
    column: 10
  },
  name: \\"c\\"
}); //$off

const d = domain.store('h', {
  ɔ: null,
  loc: {
    file: _effectorFileName,
    line: 10,
    column: 10
  },
  name: \\"d\\"
}); //$off

const e = domain.store('h', {
  ɔ: 4234,
  loc: {
    file: _effectorFileName,
    line: 12,
    column: 10
  },
  name: \\"e\\"
});
const f = domain.store('h', {
  ɔ: {},
  loc: {
    file: _effectorFileName,
    line: 13,
    column: 10
  },
  name: \\"f\\"
});"
`;

exports[`babel-plugin should create effect 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createEffect } from 'effector';
const foo = createEffect(\\"foo\\", {
  loc: {
    file: _effectorFileName,
    line: 5,
    column: 12
  },
  name: \\"foo\\"
});
const bar = createEffect('hello', {
  loc: {
    file: _effectorFileName,
    line: 6,
    column: 12
  },
  name: \\"bar\\"
});
const baz = createEffect({
  handler() {
    return 0;
  }

}, {
  loc: {
    file: _effectorFileName,
    line: 7,
    column: 12
  },
  name: \\"baz\\"
});
const quux = createEffect('nice', {
  ɔ: {
    handler() {
      return 0;
    }

  },
  loc: {
    file: _effectorFileName,
    line: 12,
    column: 13
  },
  name: \\"quux\\"
});

const f = () => createEffect(\\"f\\", {
  loc: {
    file: _effectorFileName,
    line: 17,
    column: 16
  },
  name: \\"f\\"
});"
`;

exports[`babel-plugin should create event 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createEvent } from 'effector';
const foo = createEvent(\\"foo\\", {
  loc: {
    file: _effectorFileName,
    line: 5,
    column: 12
  },
  name: \\"foo\\"
});
const bar = createEvent('hello', {
  loc: {
    file: _effectorFileName,
    line: 6,
    column: 12
  },
  name: \\"bar\\"
});
const baz = createEvent({
  name: 'nice'
}, {
  loc: {
    file: _effectorFileName,
    line: 7,
    column: 12
  },
  name: \\"baz\\"
});

const f = () => createEvent(\\"f\\", {
  loc: {
    file: _effectorFileName,
    line: 8,
    column: 16
  },
  name: \\"f\\"
});"
`;

exports[`babel-plugin should create store 1`] = `
"var _effectorFileName = \\"\\";
//@flow
import { createStore } from 'effector';
const foo = createStore('foo', {
  loc: {
    file: _effectorFileName,
    line: 4,
    column: 12
  },
  name: \\"foo\\"
});
const a = createStore('h', {
  loc: {
    file: _effectorFileName,
    line: 5,
    column: 10
  },
  name: \\"a\\"
});
const b = createStore('h', {
  ɔ: {},
  loc: {
    file: _effectorFileName,
    line: 6,
    column: 10
  },
  name: \\"b\\"
}); //$off

const c = createStore('h', {
  ɔ: 23020,
  loc: {
    file: _effectorFileName,
    line: 8,
    column: 10
  },
  name: \\"c\\"
});
const config = {
  option: 0
};
const dod = createStore(null, {
  ɔ: config,
  loc: {
    file: _effectorFileName,
    line: 10,
    column: 12
  },
  name: \\"dod\\"
});

const f = a => createStore(a, {
  loc: {
    file: _effectorFileName,
    line: 12,
    column: 15
  },
  name: \\"f\\"
});"
`;
